Fix Darwin build. Patch by  David Evans. Bug https://bugzilla.gnome.org/show_bug.cgi?id=753743 .